# noir

./: Cargo.toml  README.md  crowded_lanes.txt  max_position.txt
src/: main.rs
src/datatypes/: mod.rs  vehicle.rs
