[package]
name = "noir-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noir = { git = "https://github.com/deib-polimi/noir", features = ["async-tokio"]}
serde = "1.0.190"
tracing-subscriber = "0.3.17"
log = "0.4.8"
serde_json = "1.0.108"
csv = "1.3.0"
tokio = { version = "1.33.0", features = ["rt", "net"]}